--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.37",
+    "@types/uuid": "^8.3.0",
+    "apollo-server": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^9.1.1",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.32",
+    "typescript": "^4.2.3",
+    "uuid": "^8.3.2"
+  }
 }
