thorugh finish data load completely and make grqph finish

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,5 @@
 # step 1
-postgres:
-	docker run --name pg13 -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=secret -d postgres
+redis:
+	docker run --name redis -p 6379:6379 -d redis redis-server
 
-# step 2
-pgadmin:
-	docker run --name pgadmin4 -p 80:80 -e 'PGADMIN_DEFAULT_EMAIL=nazemi.works@gmail.com' -e 'PGADMIN_DEFAULT_PASSWORD=secret' --link pg13:pg13 -d dpage/pgadmin4
+
